fixed zoom z-index issue on iOS (fingers crossed), needed to specify element as position: relative for z-index to take hold

--- a/scss/_custom.scss
+++ b/scss/_custom.scss
@@ -44,6 +44,7 @@ a {
 #mainContainer {
 	background: $grey;
 	min-height: calc(100vh - 101px);
+	position: relative;
 	z-index: 100;
 }
 
